trying to merge, makefile error

--- a/cub3D/Makefile
+++ b/cub3D/Makefile
@@ -3,41 +3,64 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: jduraes- <jduraes-@student.42.fr>          +#+  +:+       +#+         #
+#    By: luguimar <luguimar@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/07/15 20:48:16 by jduraes-          #+#    #+#              #
-#    Updated: 2024/07/31 21:40:16 by jduraes-         ###   ########.fr        #
+#    Created: 2024/01/10 22:33:22 by luguimar          #+#    #+#              #
+#    Updated: 2024/07/25 02:35:43 by luguimar         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = cub3d
-SRC = src/parser/main.c src/parser/parse.c src/parser/checker.c src/parser/map_parse.c src/parser/parse_utils.c
-OBJS = $(SRC:.c=.o)
-HEADER = src/cub3d.h
+NAME = cub3D
+
+SRC = src/parser/main.c src/parser/parse.c src/parser/checker.c src/parser/map_parse.c src/parser/parse_utils.c src/graphics/graphics.c
+
+OBJS = ${SRC:.c=.o}
+
 CC = cc -g
-RM = rm -f
+MOVE = mv
+REMOVE = rm -f
+EXTRACT = tar -xvf
+DOWNLOAD = wget -O
+CFLAGS = -Wall -Wextra -Werror -O3
 INCLUDE = -I .
-CFLAGS = -Wall -Wextra -Werror
-#IFLAGS = -L ./minilibx-linux -lmlx -Ilmlx -lXext -lX11 -lm
-#LIBMLX = minilibx-linux/libmlx.a
+MAKE = make -C
+LIBRARIES = lib
+MINILIBX_FILE = minilibx-linux.tgz
+MINILIBX_URL = https://cdn.intra.42.fr/document/document/25858/minilibx-linux.tgz
+LIBFT_PATH = lib/libft
+MLX_PATH = lib/mlx
+LIBFT = ${LIBFT_PATH}/libft.a
+MLX = -L ${MLX_PATH} -lmlx -Ilmlx -lXext -lX11 -lm
 
-.o:.c
-	$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $(<:.c=.o)
+$(NAME): $(MLX) ${OBJS} ${LIBFT}
+		${CC} ${OBJS} ${LIBFT} ${MLX} -o ${NAME}
 
-$(NAME):	$(OBJS)
-	make bonus -C libft all
-	$(CC) $(OBJS) -L libft -lft -o $(NAME)
+$(LIBFT):
+		${MAKE} ${LIBFT_PATH}
 
-all: $(NAME)
+$(MLX): download-and-extract-mlx
+		${MAKE} ${MLX_PATH}
+
+download-and-extract-mlx:
+		if [ ! -d "${MLX_PATH}" ]; then \
+		${DOWNLOAD} ${MINILIBX_FILE} ${MINILIBX_URL}; \
+		${EXTRACT} ${MINILIBX_FILE} -C ${LIBRARIES}; \
+		${REMOVE} ${MINILIBX_FILE}; \
+		${MOVE} lib/minilibx-linux ${MLX_PATH}; \
+		fi
+
+all: ${NAME}
+
 clean:
-	$(RM) $(OBJS)
-	@make clean -C libft
+		${MAKE} ${LIBFT_PATH} clean
+		if [ -d "${MLX_PATH}" ]; then ${MAKE} ${MLX_PATH} clean; fi
+		${RM} ${OBJS}
 
-fclean:	clean
-	$(RM) $(NAME)
-	@make fclean -C libft
+fclean: clean
+		${MAKE} ${LIBFT_PATH} fclean
+		if [ -d "${MLX_PATH}" ]; then ${RM} -r ${MLX_PATH}; fi
+		${RM} ${NAME}
 
 re: fclean all
-	make re -C libft
 
-.phony: clean fclean re
+.PHONY: download-and-extract-mlx all clean fclean re
